k8s/address.yaml
# address-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8086
      targetPort: 8086
  selector:
    app: address
---
# address-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address
  namespace: my-springcloud
  labels:
    app: address
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address
  template:
    metadata:
      labels:
        app: address
    spec:
      containers:
        - name: address
          image: address:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
