k8s/admin.yaml
# admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8090
      targetPort: 8090
  selector:
    app: admin
---
# admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: my-springcloud
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: admin
          image: 192.168.10.16:9090/gmall/admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
