k8s/auth.yaml
# auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: auth
---
# auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: my-springcloud
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: auth
          image: 192.168.10.16:9090/gmall/auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
