k8s/carts.yaml
# carts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: carts
---
# carts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  namespace: my-springcloud
  labels:
    app: carts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carts
  template:
    metadata:
      labels:
        app: carts
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: carts
          image: 192.168.10.16:9090/gmall/carts:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
