k8s/coupon.yaml
# coupon-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: coupon-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8091
      targetPort: 8091
  selector:
    app: coupon
---
# coupon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon
  namespace: my-springcloud
  labels:
    app: coupon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon
  template:
    metadata:
      labels:
        app: coupon
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: coupon
          image: 192.168.10.16:9090/gmall/coupon:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8091
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
