k8s/customer-ws.yaml
# customer-ws-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-ws-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8094
      targetPort: 8094
  selector:
    app: customer-ws
---
# customer-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-ws
  namespace: my-springcloud
  labels:
    app: customer-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-ws
  template:
    metadata:
      labels:
        app: customer-ws
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: customer-ws
          image: 192.168.10.16:9090/gmall/customer-ws:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8094
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
