k8s/favorites.yaml
# favorites-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: favorites-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: favorites
---
# favorites-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: favorites
  namespace: my-springcloud
  labels:
    app: favorites
spec:
  replicas: 1
  selector:
    matchLabels:
      app: favorites
  template:
    metadata:
      labels:
        app: favorites
    spec:
      containers:
        - name: favorites
          image: favorites:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8087
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
