k8s/goods.yaml
# goods-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goods-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: goods
---
# goods-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goods
  namespace: my-springcloud
  labels:
    app: goods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goods
  template:
    metadata:
      labels:
        app: goods
    spec:
      containers:
        - name: goods
          image: goods:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
