k8s/obs.yaml
# obs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: obs-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8093
      targetPort: 8093
  selector:
    app: obs
---
# obs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obs
  namespace: my-springcloud
  labels:
    app: obs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obs
  template:
    metadata:
      labels:
        app: obs
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: obs
          image: 192.168.10.16:9090/gmall/obs:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8093
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
