k8s/order.yaml
# order-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: order
---
# order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: my-springcloud
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      imagePullSecrets:
        - name: harbor-cred
      containers:
        - name: order
          image: 192.168.10.16:9090/gmall/order:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
