k8s/pay.yaml
# pay-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pay-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8085
      targetPort: 8085
  selector:
    app: pay
---
# pay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pay
  namespace: my-springcloud
  labels:
    app: pay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pay
  template:
    metadata:
      labels:
        app: pay
    spec:
      containers:
        - name: pay
          image: pay:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
