k8s/user-center.yaml
# user-center-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-center-svc
  namespace: my-springcloud
spec:
  type: ClusterIP
  ports:
    - port: 8089
      targetPort: 8089
  selector:
    app: user-center
---
# user-center-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-center
  namespace: my-springcloud
  labels:
    app: user-center
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-center
  template:
    metadata:
      labels:
        app: user-center
    spec:
      containers:
        - name: user-center
          image: user-center:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8089
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
